enable array input parameter

--- a/Telia.GraphQL.Tests/Telia.GraphQL.Tests.csproj
+++ b/Telia.GraphQL.Tests/Telia.GraphQL.Tests.csproj
@@ -162,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GraphQLClassGeneratorTests.cs" />
+    <Compile Include="ParameterTests.cs" />
     <Compile Include="TypeCheckTests.cs" />
     <Compile Include="GraphQLClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
