--- a/Telia.GraphQL.Tooling/Telia.GraphQL.Tooling.csproj
+++ b/Telia.GraphQL.Tooling/Telia.GraphQL.Tooling.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BaseCodeGeneratorWithSite.cs" />
     <Compile Include="ClassGenerator\DefinitionHandlers\EnumTypeDefinitionHandler.cs" />
     <Compile Include="ClassGenerator\DefinitionHandlers\IDefinitionHandler.cs" />
+    <Compile Include="ClassGenerator\DefinitionHandlers\InputObjectTypeDefinitionHandler.cs" />
     <Compile Include="ClassGenerator\DefinitionHandlers\ObjectTypeDefinitionHandler.cs" />
     <Compile Include="ClassGenerator\Generator.cs" />
     <Compile Include="ClassGenerator\GeneratorConfig.cs" />
