--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ before_build:
 build:
   project: Telia.GraphQL.sln
   publish_nuget: true
-  publish_nuget_symbols: true
+  publish_nuget_symbols: false
   include_nuget_references: true
   verbosity: minimal
 deploy:
