--- a/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
+++ b/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
@@ -36,8 +36,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GraphQL-Parser">
-      <HintPath>..\lib\GraphQL-Parser.dll</HintPath>
+    <Reference Include="GraphQLParser">
+      <HintPath>..\lib\GraphQLParser.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
