Fix collision case between fields and enclosing types

--- a/Telia.GraphQL.Tests/Telia.GraphQL.Tests.csproj
+++ b/Telia.GraphQL.Tests/Telia.GraphQL.Tests.csproj
@@ -203,10 +203,16 @@
     <Content Include="CodeGenerationCases\SingleTypeWithAWSTypes_classes.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="CodeGenerationCases\TypesWithCollidingFieldAndTypeNames_classes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="CodeGenerationCases\SingleTypeWithScalarProps_classes.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="CodeGenerationCases\SingleTypeWithAWSTypes_schema.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CodeGenerationCases\TypesWithCollidingFieldAndTypeNames_schema.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="CodeGenerationCases\SingleTypeWithScalarProps_schema.txt">
