--- a/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
+++ b/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DefaultNetworkClient.cs" />
     <Compile Include="ExtractParameterVisitor.cs" />
     <Compile Include="GraphQLCLient.cs" />
+    <Compile Include="GraphQLObjectConverter.cs" />
     <Compile Include="GraphQLInterfaceConverter.cs" />
     <Compile Include="GraphQLResult.cs" />
     <Compile Include="INetworkClient.cs" />
