Fix argument generation & keywords as names

--- a/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
+++ b/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\GraphQLArgumentAttribute.cs" />
     <Compile Include="Attributes\GraphQLTypeAttribute.cs" />
     <Compile Include="Attributes\GraphQLFieldAttribute.cs" />
     <Compile Include="CallChain.cs" />
