--- a/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
+++ b/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
@@ -65,6 +65,7 @@
     <Compile Include="GraphQLInterfaceConverter.cs" />
     <Compile Include="GraphQLResult.cs" />
     <Compile Include="INetworkClient.cs" />
+    <Compile Include="InputObjectValue.cs" />
     <Compile Include="PathGatheringVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryContext.cs" />
