--- a/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
+++ b/Telia.GraphQL.Client/Telia.GraphQL.Client.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -52,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentEvaluationException.cs" />
     <Compile Include="Attributes\GraphQLArgumentAttribute.cs" />
     <Compile Include="Attributes\GraphQLTypeAttribute.cs" />
     <Compile Include="Attributes\GraphQLFieldAttribute.cs" />
@@ -63,9 +65,9 @@
     <Compile Include="GraphQLCLient.cs" />
     <Compile Include="GraphQLObjectConverter.cs" />
     <Compile Include="GraphQLInterfaceConverter.cs" />
+    <Compile Include="GraphQLQueryInfo.cs" />
     <Compile Include="GraphQLResult.cs" />
     <Compile Include="INetworkClient.cs" />
-    <Compile Include="InputObjectValue.cs" />
     <Compile Include="PathGatheringVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryContext.cs" />
