--- a/Telia.GraphQL.Tests/packages.config
+++ b/Telia.GraphQL.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.9.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.9.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
