Adding a benchmark project

--- a/net7.0/Telia.LinqToGraphQL.Tests/Telia.LinqToGraphQL.Tests.csproj
+++ b/net7.0/Telia.LinqToGraphQL.Tests/Telia.LinqToGraphQL.Tests.csproj
@@ -9,11 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Assets\expected-roaming-country-korea-private.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Assets\expected-roaming-country-korea-private.json" />
+    <Compile Remove="Assets\**" />
+    <EmbeddedResource Remove="Assets\**" />
+    <None Remove="Assets\**" />
   </ItemGroup>
 
   <ItemGroup>
