Refactored and restructured LinqToGraphQLToModel project - Added bunch more unit tests - Moved a bunch of tests form 4.8 version to 7 version - Fixed a minor issue where obj is returned instead of null in the Printer.cs (print obj value) [could be a check on "type" (string or not... as strings dont want {} ) - Benchmarks added and adjusted

--- a/net7.0/Telia.GraphQLSchemaToCSharp/Telia.GraphQLSchemaToCSharp.csproj
+++ b/net7.0/Telia.GraphQLSchemaToCSharp/Telia.GraphQLSchemaToCSharp.csproj
@@ -10,8 +10,11 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Telia.LinqToGraphQL">
-      <HintPath>..\Telia.LinqToGraphQL\bin\Release\net7.0\Telia.LinqToGraphQL.dll</HintPath>
+    <Folder Include="DependencyBin\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Telia.LinqToGraphQLToModel">
+      <HintPath>DependencyBin\Telia.LinqToGraphQLToModel.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
