--- a/net7.0/Telia.LinqToGraphQLToModel/Telia.LinqToGraphQLToModel.csproj
+++ b/net7.0/Telia.LinqToGraphQLToModel/Telia.LinqToGraphQLToModel.csproj
@@ -1,17 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-    <Configurations>Release</Configurations>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="GraphQL-Parser" Version="8.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="System.Text.Json" Version="6.0.7" />
-    <PackageReference Include="SystemLibrary.Common.Net" Version="6.6.1.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Telia.GraphQLPrinter\Telia.GraphQLPrinter\Telia.GraphQLPrinter.csproj" />
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+		<Configurations>Release</Configurations>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DebugType>none</DebugType>
+		<NoWarn>1701;1702;CS8600;CS8616;CS8618</NoWarn>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="GraphQL-Parser" Version="8.1.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+		<PackageReference Include="System.Text.Json" Version="6.0.7" />
+		<PackageReference Include="SystemLibrary.Common.Net" Version="6.6.1.4" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<ProjectReference Include="..\Telia.GraphQLPrinter\Telia.GraphQLPrinter\Telia.GraphQLPrinter.csproj" />
+	</ItemGroup>
 </Project>
